--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -40,8 +40,9 @@
 
   
   <button class="btn-like" (click)="increaseLikes(product)">
-     {{ product.numberOflikes }} <img src="https://www.flaticon.com/svg/vstatic/svg/833/833472.svg?token=exp=1615813176~hmac=333980311c8bbe1ba207a921fa60c454" width="30" height="15">
+     {{ product.numberOflikes }} <img src="https://cdn.worldvectorlogo.com/logos/facebook-like.svg" width="30" height="15">
   </button>
+  
 
   <p *ngIf="product.description">
     <span style="font-weight: bold; color: black; font-size: 15px;">Description:</span> 
